--- a/app/views/index/index.html.erb
+++ b/app/views/index/index.html.erb
@@ -8,11 +8,13 @@
 <p>
 <% if params[:exp] != nil %>
 <h4>Expresión ingresada:</h4>
-<%= '$$f(x)=' + params[:exp] + '$$' %>
+<%= '$$f(x)=' + @original + '$$' %>
 <% end %>
 <% if @result != nil %>
 <h4>Resultado:</h4>
-<%= '$$' + @result + '$$' %>
+<%= "$$ f'(x)=" + @result + '$$' %>
+<h4>Resultado simplificado:</h4>
+<%# "$$ f'(x)=" + @result_simplified + '$$' %>
 <% end %>
 </p>
 </script>
